2017-10-11

        * Version 1.5.0 released
        =========================

        Add GEbounds equality and inequality operators
        Fix OpenMP segfault issue when fetching CTA events (#2192) 
        Correct GModelSpatialComposite::copy_members() bug.
        Improve efficiency of GGti::contains() method.
        Add GFitsTableCol::scale() method (#2191)
        Implement code generator for GammaLib extensions (#2190)
        Implement COMPTEL event list support (#2187)
        Implement COMPTEL response computation (#2186)
        Correct output of COMPTEL DRB fitting XML model (#2184)
        Add COMPTEL SDA, SDB and ICT response files (#2186)
        Add GModelSpectralNodes spectral model constructor (#2178)
        Fix UTC rounding error in GTime::utc() method (#2177)
        Add time parameter to GApplicationPar class (#1864)
        Add time string constructor and set method to GTime class (#1864)
        Add GSkyRegionMap class (#1121)


2017-08-24

        * Bug fix version 1.4.2 released
        ================================

        Correct rate computation in GModelTemporalLightCurve::mc() (#2181)


2017-08-22

        * Bug fix version 1.4.1 released
        ================================

        Correct GModelSpectralNodes::mc() regression for energies outside the node energy range (#2179)


2017-07-28

        * Version 1.4.0 released
        =========================

        Add GCTAEventBin::ipix() and ieng() setter methods (#2171)
        Write response information into simulated observation definition file (#2170)
        Normalise phase curves by default (#2154, #2172)
        Support Python list slicing for container classes (#2128)
        Add Python typemaps for GObservation::likelihood() output argument (#2126)
        Add GSkyRegions::overlaps() and GSkyMap::overlaps() classes (#1980)


2017-07-06

        * Bug fix version 1.3.1 released
        ================================
